--- a/style.css
+++ b/style.css
@@ -1,13 +1,4 @@
-/* style.css */
+/* Custom: Para garantir que os blocos fiquem com aparência pixelada */
 canvas {
-	background-color: rgba(0, 0, 0, 0.8);
-}
-
-.mobile-btn {
-	touch-action: manipulation;
-	user-select: none;
-}
-
-#overlay {
-	display: none;
+	image-rendering: pixelated;
 }
